@@ -21,6 +21,7 @@ import org.eclipse.syson.sysml.BindingConnectorAsUsage;
 import org.eclipse.syson.sysml.EndFeatureMembership;
 import org.eclipse.syson.sysml.Feature;
 import org.eclipse.syson.sysml.FeatureMembership;
+import org.eclipse.syson.sysml.InterfaceUsage;
 import org.eclipse.syson.sysml.PartUsage;
 import org.eclipse.syson.sysml.PortUsage;
 import org.eclipse.syson.sysml.ReferenceSubsetting;
@@ -71,5 +72,38 @@ public class InterconnectionViewCreateService extends ViewCreateService {
         targetReferenceSubsetting.setReferencedFeature(targetPort);
 
         return bindingConnectorAsUsage;
+    }
+
+    public InterfaceUsage createInterfaceUsage(PortUsage sourcePort, PortUsage targetPort) {
+        PartUsage containerPart = this.utilService.getContainerPart(sourcePort);
+        if (containerPart == null) {
+            return null;
+        }
+        FeatureMembership featureMembership = SysmlFactory.eINSTANCE.createFeatureMembership();
+        containerPart.getOwnedRelationship().add(featureMembership);
+
+        InterfaceUsage interfaceUsage = SysmlFactory.eINSTANCE.createInterfaceUsage();
+        interfaceUsage.setDeclaredName("connect");
+        featureMembership.getOwnedRelatedElement().add(interfaceUsage);
+
+        EndFeatureMembership sourceEndFeatureMembership = SysmlFactory.eINSTANCE.createEndFeatureMembership();
+        interfaceUsage.getOwnedRelationship().add(sourceEndFeatureMembership);
+        Feature sourceFeature = SysmlFactory.eINSTANCE.createFeature();
+        sourceFeature.setIsEnd(true);
+        sourceEndFeatureMembership.getOwnedRelatedElement().add(sourceFeature);
+        ReferenceSubsetting sourceReferenceSubsetting = SysmlFactory.eINSTANCE.createReferenceSubsetting();
+        sourceFeature.getOwnedRelationship().add(sourceReferenceSubsetting);
+        sourceReferenceSubsetting.setReferencedFeature(sourcePort);
+
+        EndFeatureMembership targetEndFeatureMembership = SysmlFactory.eINSTANCE.createEndFeatureMembership();
+        interfaceUsage.getOwnedRelationship().add(targetEndFeatureMembership);
+        Feature targetFeature = SysmlFactory.eINSTANCE.createFeature();
+        targetFeature.setIsEnd(true);
+        targetEndFeatureMembership.getOwnedRelatedElement().add(targetFeature);
+        ReferenceSubsetting targetReferenceSubsetting = SysmlFactory.eINSTANCE.createReferenceSubsetting();
+        targetFeature.getOwnedRelationship().add(targetReferenceSubsetting);
+        targetReferenceSubsetting.setReferencedFeature(targetPort);
+
+        return interfaceUsage;
     }
 }
