@@ -22,10 +22,12 @@ import org.eclipse.sirius.components.representations.MessageLevel;
 import org.eclipse.syson.diagram.common.view.services.ViewEdgeService;
 import org.eclipse.syson.diagram.interconnection.view.InterconnectionViewDiagramDescriptionProvider;
 import org.eclipse.syson.sysml.BindingConnectorAsUsage;
+import org.eclipse.syson.sysml.ConnectorAsUsage;
 import org.eclipse.syson.sysml.Element;
 import org.eclipse.syson.sysml.EndFeatureMembership;
 import org.eclipse.syson.sysml.Feature;
 import org.eclipse.syson.sysml.FeatureChaining;
+import org.eclipse.syson.sysml.InterfaceUsage;
 import org.eclipse.syson.sysml.PartUsage;
 import org.eclipse.syson.sysml.PortUsage;
 import org.eclipse.syson.sysml.ReferenceSubsetting;
@@ -45,13 +47,14 @@ public class InterconnectionViewEdgeService extends ViewEdgeService {
     }
 
     /**
-     * Return the source {@link PortUsage} of the given {@link BindingConnectorAsUsage}.
+     * Return the source {@link PortUsage} of the given {@link ConnectorAsUsage} (e.g. a
+     * {@link BindingConnectorAsUsage}, an {@link InterfaceUsage}).
      *
      * @param bind
-     *            the given {@link BindingConnectorAsUsage}.
+     *            the given {@link ConnectorAsUsage}.
      * @return the source {@link PortUsage} if found, <code>null</code> otherwise.
      */
-    public PortUsage getSourcePort(BindingConnectorAsUsage bind) {
+    public PortUsage getSourcePort(ConnectorAsUsage bind) {
         PortUsage sourcePort = null;
         Optional<EndFeatureMembership> endFeatureMembership = bind.getOwnedFeatureMembership().stream()
                 .filter(EndFeatureMembership.class::isInstance)
@@ -82,13 +85,14 @@ public class InterconnectionViewEdgeService extends ViewEdgeService {
     }
 
     /**
-     * Return the target {@link PortUsage} of the given {@link BindingConnectorAsUsage}.
+     * Return the target {@link PortUsage} of the given {@link ConnectorAsUsage} (e.g. a
+     * {@link BindingConnectorAsUsage}, an {@link InterfaceUsage}).
      *
      * @param bind
-     *            the given {@link BindingConnectorAsUsage}.
+     *            the given {@link ConnectorAsUsage}.
      * @return the target {@link PortUsage} if found, <code>null</code> otherwise.
      */
-    public PortUsage getTargetPort(BindingConnectorAsUsage bind) {
+    public PortUsage getTargetPort(ConnectorAsUsage bind) {
         PortUsage targetPort = null;
         Optional<EndFeatureMembership> endFeatureMembership = bind.getOwnedFeatureMembership().stream()
                 .filter(EndFeatureMembership.class::isInstance)
@@ -119,16 +123,16 @@ public class InterconnectionViewEdgeService extends ViewEdgeService {
     }
 
     /**
-     * Set a new source {@link Element} for the given {@link BindingConnectorAsUsage}. Also move the given connector
+     * Set a new source {@link Element} for the given {@link ConnectorAsUsage}. Also move the given connector
      * into the parent (i.e. should be a PartUsage) of the new source.
      *
      * @param bind
-     *            the given {@link BindingConnectorAsUsage}.
+     *            the given {@link ConnectorAsUsage}.
      * @param newSource
      *            the new target {@link Element}.
-     * @return the given {@link BindingConnectorAsUsage}.
+     * @return the given {@link ConnectorAsUsage}.
      */
-    public BindingConnectorAsUsage setSourcePort(BindingConnectorAsUsage bind, Element newSource) {
+    public ConnectorAsUsage setSourcePort(ConnectorAsUsage bind, Element newSource) {
         if (newSource instanceof PortUsage newSourcePort) {
             Optional<EndFeatureMembership> endFeatureMembership = bind.getOwnedFeatureMembership().stream()
                     .filter(EndFeatureMembership.class::isInstance)
@@ -148,24 +152,23 @@ public class InterconnectionViewEdgeService extends ViewEdgeService {
                                 partUsage.getOwnedRelationship().add(bind.getOwningRelationship());
                             }
                         });
-
             }
         } else {
-            this.feedbackMessageService.addFeedbackMessage(new Message("The source of the BindingConnectorAsUsage can only be connected to a PortUsage", MessageLevel.WARNING));
+            this.feedbackMessageService.addFeedbackMessage(new Message("The source of the ConnectorAsUsage can only be connected to a PortUsage", MessageLevel.WARNING));
         }
         return bind;
     }
 
     /**
-     * Set a new target {@link Element} for the given {@link BindingConnectorAsUsage}.
+     * Set a new target {@link Element} for the given {@link ConnectorAsUsage}.
      *
      * @param bind
-     *            the given {@link BindingConnectorAsUsage}.
+     *            the given {@link ConnectorAsUsage}.
      * @param newTarget
      *            the new target {@link Element}.
-     * @return the given {@link BindingConnectorAsUsage}.
+     * @return the given {@link ConnectorAsUsage}.
      */
-    public BindingConnectorAsUsage setTargetPort(BindingConnectorAsUsage bind, Element newTarget) {
+    public ConnectorAsUsage setTargetPort(ConnectorAsUsage bind, Element newTarget) {
         if (newTarget instanceof PortUsage newTargetPort) {
             Optional<EndFeatureMembership> endFeatureMembership = bind.getOwnedFeatureMembership().stream()
                     .filter(EndFeatureMembership.class::isInstance)
@@ -173,14 +176,14 @@ public class InterconnectionViewEdgeService extends ViewEdgeService {
                     .reduce((first, second) -> second);
             if (endFeatureMembership.isPresent()) {
                 endFeatureMembership.get().getOwnedRelatedElement().stream()
-                        .filter(Feature.class::isInstance)
-                        .map(Feature.class::cast)
-                        .findFirst()
-                        .map(Feature::getOwnedReferenceSubsetting)
-                        .ifPresent(refSub -> refSub.setReferencedFeature(newTargetPort));
+                .filter(Feature.class::isInstance)
+                .map(Feature.class::cast)
+                .findFirst()
+                .map(Feature::getOwnedReferenceSubsetting)
+                .ifPresent(refSub -> refSub.setReferencedFeature(newTargetPort));
             }
         } else {
-            this.feedbackMessageService.addFeedbackMessage(new Message("The target of the BindingConnectorAsUsage can only be connected to a PortUsage", MessageLevel.WARNING));
+            this.feedbackMessageService.addFeedbackMessage(new Message("The target of the ConnectorAsUsage can only be connected to a PortUsage", MessageLevel.WARNING));
         }
         return bind;
     }
